--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -15,7 +15,7 @@ body.fontLoaded {
 }
 
 :global(#app) {
-  background-color: #FAFAFA;
+  background-color: white;
   min-height: 100%;
   min-width: 100%;
 }
