adding lost grid

--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -1,3 +1,19 @@
 .navigation {
 
 }
+
+.bar {
+    background-color: #00ff00;
+    &__item {
+
+
+        &--left {
+            background-color: #ff0000;
+             lost-center: 980px;
+        }
+        &--right {
+            background-color: #0000ff;
+        }
+    }
+
+}
