--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -11,6 +11,11 @@ body {
     &__item {
         &--left {
             background-color: #ff0000;
+            &__item {
+                &--logo {
+                    color: #fff;
+                }
+            }
         }
         &--right {
             background-color: #353;
