--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -18,6 +18,9 @@ body {
     }
 
 }
+/*
+    TODO: Refator this to make it more flexible & repeatitive
+*/
 #logotype {
     h3 {
         color: #fff;
