--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -1,28 +1,44 @@
-body {
-    lost-center: 90%;
-}
+@lost flexbox flex;
+$blue: #00f;
+$red: #f00;
+$green: #0f0;
 
 .navigation {
-
+    position: relative;
+    background-color: $blue;
+    width : 100%;
+    height: 50px;
 }
 
 .bar {
-    background-color: $blue;
+    lost-center: 90%;
     &__item {
-        &--left {
-            background-color: $blue;
+        &--left, &--right {
+             lost-column: 1/2;
+             background-color: #f00;
+             height: 50px;
+             display: flex;
+             align-items: center;
         }
         &--right {
-            background-color: #353;
-        }
+             justify-content: flex-end;
+         }
     }
-
 }
 /*
     TODO: Refator this to make it more flexible & repeatitive
 */
-#logotype {
+.logotype {
    h3 {
-        color: #ffffff;
+        color: #fff;
+    }
+}
+
+.links {
+    align-self: flex-end;
+    li {
+        display: inline-block;
+        margin-right: 12px;
+
     }
 }
