finishing onChange event test on feeling select element, swaping expect assertion library to chai (for unit testing)

--- a/internals/generators/container/reducer.test.js.hbs
+++ b/internals/generators/container/reducer.test.js.hbs
@@ -1,4 +1,4 @@
-import expect from 'expect';
+import { expect } from 'chai';
 import {{ camelCase name }}Reducer from '../reducer';
 import { fromJS } from 'immutable';
 
