--- a/internals/generators/container/selectors.test.js.hbs
+++ b/internals/generators/container/selectors.test.js.hbs
@@ -2,7 +2,7 @@ import {
   select{{ properCase name }},
 } from '../selectors';
 import { fromJS } from 'immutable';
-import expect from 'expect';
+import { expect } from 'chai';
 
 const selector = select{{ properCase name}}();
 
