--- a/internals/generators/container/sagas.test.js.hbs
+++ b/internals/generators/container/sagas.test.js.hbs
@@ -2,7 +2,7 @@
  * Test  sagas
  */
 
-import expect from 'expect';
+import { expect } from 'chai';
 import { take, call, put, select } from 'redux-saga/effects';
 import { defaultSaga } from '../sagas';
 
