--- a/internals/generators/container/test.js.hbs
+++ b/internals/generators/container/test.js.hbs
@@ -1,7 +1,7 @@
 import {{ properCase name }} from '../index';
 
-import expect from 'expect';
-import { shallow } from 'enzyme';
+import { expect } from 'chai';
+import { shallow, render, mount } from 'enzyme';
 import React from 'react';
 
 describe('<{{ properCase name }} />', () => {
