adding home main selector and a child to it called secondHelloWorld

--- a/internals/generators/container/reducer.test.js.hbs
+++ b/internals/generators/container/reducer.test.js.hbs
@@ -4,6 +4,6 @@ import { fromJS } from 'immutable';
 
 describe('{{ camelCase name }}Reducer', () => {
   it('returns the initial state', () => {
-    expect({{ camelCase name }}Reducer(undefined, {})).toEqual(fromJS({}));
+    expect({{ camelCase name }}Reducer(undefined, {})).to.eql(fromJS({}));
   });
 });
