--- a/app/components/WelcomeText/styles.css
+++ b/app/components/WelcomeText/styles.css
@@ -1,6 +1,7 @@
 .welcomeText {
-    margin-top: 25vh;
-    h1,h3 {
-     text-align: center;
-    }
+  margin-top: 25vh;
+  h1,
+  h3 {
+    text-align: center;
+  }
 }
