--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -10,7 +10,8 @@
 .bar {
   lost-center: 95%;
   &__item {
-    &--left, &--right {
+    &--left,
+    &--right {
       lost-column: 1/2;
       background-color: #F00;
       height: 50px;
