--- a/internals/generators/container/actions.test.js.hbs
+++ b/internals/generators/container/actions.test.js.hbs
@@ -1,18 +1,14 @@
 import { expect } from 'chai';
-import {
-  defaultAction,
-} from '../actions';
-import {
-  DEFAULT_ACTION,
-} from '../constants';
+import { DEFAULT_ACTION } as CONSTANT from './constants';
+import { defaultAction } from '../actions';
 
 describe('{{ properCase name }} actions', () => {
   describe('Default Action', () => {
     it('has a type of DEFAULT_ACTION', () => {
       const expected = {
-        type: DEFAULT_ACTION,
+        type: DEFAULT_ACTION.REQUEST,
       };
-      expect(defaultAction())..to.eql(expected);
+      expect(defaultAction()).to.eql(expected);
     });
   });
 });
