--- a/internals/generators/container/reducer.js.hbs
+++ b/internals/generators/container/reducer.js.hbs
@@ -5,15 +5,13 @@
  */
 
 import { fromJS } from 'immutable';
-import {
-  DEFAULT_ACTION,
-} from './constants';
+import { DEFAULT_ACTION } from './constants';
 
 const initialState = fromJS({});
 
 function {{ camelCase name }}Reducer(state = initialState, action) {
   switch (action.type) {
-    case DEFAULT_ACTION:
+    case DEFAULT_ACTION.REQUEST:
       return state;
     default:
       return state;
