--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -1,8 +1,9 @@
 @lost flexbox flex;
+$bg: #1d1921;
 
 .navigation {
   position: relative;
-  background-color: #00f;
+  background-color: $bg;
   width: 100%;
   height: 50px;
 }
@@ -13,7 +14,7 @@
     &--left,
     &--right {
       lost-column: 1/2;
-      background-color: #f00;
+      background-color: $bg;
       height: 50px;
       display: flex;
       align-items: center;
