Fixing global postcss variables

--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -1,9 +1,8 @@
-$main: #1d1921;
-
+/* Global Variables */
 :root {
-  background-color: $main;
+  background-color: var(--cMain);
 }
 
 .app {
-  background-color: $main;
+  background-color: var(--cMain);
 }
