--- a/app/components/Select/styles.css
+++ b/app/components/Select/styles.css
@@ -1,3 +1,32 @@
-.app {
-  background-color: black;
+:global .Select-control,
+:global .is-open >.Select-control,
+:global .Select-menu-outer,
+:global .Select-option {
+  background-color: var(--cMain);
+  border-color: var(--cText);
+  border-radius: 0;
+}
+
+:global .Select-option {
+  &.is-selected,
+  &.is-focused {
+    color: var(--cText);
+    background-color: var(--cSup);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: var(--cSup);
+  }
+}
+
+:global .has-value.Select--single > .Select-control > .Select-value .Select-value-label,
+:global .has-value.is-pseudo-focused.Select--single > .Select-control > .Select-value .Select-value-label {
+  color:  var(--cText);
+}
+
+.title {
+  color: var(--cSup);
+  font-size: 12px;
+  text-transform: uppercase;
 }
