--- a/app/components/Select/styles.css
+++ b/app/components/Select/styles.css
@@ -9,9 +9,12 @@
   font-size: var(--fsText);
 }
 
+:global .Select-input {
+  color: var(--cText);
+}
+
 :global .Select-control {
   min-width: 200px;
-  max-width: 350px;
 }
 
 :global .Select-option {
@@ -53,5 +56,6 @@
 }
 
 .select {
-  margin: 10px;
+  margin: 30px 10px 0 0;
+  width: 100%;
 }
