--- a/app/components/SelectList/styles.css
+++ b/app/components/SelectList/styles.css
@@ -1,5 +1,11 @@
 .selectList {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
 }
+
+.selectItem {
+  float: left;
+  flex-grow: 1;
+  padding: 0 10px 0 0;
+}
+
