--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -10,14 +10,14 @@ $bg: #22262F;
 
 .bar {
   lost-center: 95%;
+  padding: 15px 0;
   &__item {
     &--left,
     &--right {
       lost-column: 1/2;
       background-color: $bg;
-      height: 50px;
       display: flex;
-      align-items: center;
+      align-items: baseline;
     }
     &--right {
       justify-content: flex-end;
