--- a/app/containers/MovieSearchResult/styles.css
+++ b/app/containers/MovieSearchResult/styles.css
@@ -21,8 +21,8 @@
     height: 100vh;
     :local img {
       /*height: 100vh;*/
+      min-width: 100%;
       lost-column: 1 0;
-      margin-top: -50%;
     }
   }
 }
