--- a/app/containers/MovieSearchResult/styles.css
+++ b/app/containers/MovieSearchResult/styles.css
@@ -9,7 +9,7 @@
   }
 
   .information {
-    color: red;
+    color: var(--cHeading);
   }
 
   .gallery {
@@ -31,8 +31,20 @@
   .item {
     float: left;
     lost-column: 1/2 0;
-    &.header {
+    padding: 15px 0;
+    &.header,
+    &.rate,
+    &.description {
       lost-column: 1;
     }
+    &.header {
+      margin-top: 30px;
+    }
   }
+}
+
+.icon {
+  color: var(--cSup);
+  font-size: 3rem;
+  margin: 8px 10px 0 0;
 }
