--- a/app/containers/MovieSearchResult/styles.css
+++ b/app/containers/MovieSearchResult/styles.css
@@ -65,6 +65,10 @@
   font-size: 3rem;
   margin: 8px 10px 0 0;
   &.unfilled {
-    color: blue;
+    color: transparent;
+    :local path {
+      stroke: var(--cSup);
+      stroke-width: 2;
+    }
   }
 }
