--- a/app/containers/MovieSearchResult/styles.css
+++ b/app/containers/MovieSearchResult/styles.css
@@ -10,6 +10,7 @@
 
   .information {
     color: var(--cHeading);
+    margin-top: 1.5vh;
   }
 
   .gallery {
@@ -31,9 +32,24 @@
   .item {
     float: left;
     lost-column: 1;
-    padding: 15px 0;
+    padding: 25px 0 15px 0;
     font-size: 18px;
-    font-family: "Maven Pro", sans-serif;
+    font-family: "Quattrocento Sans", sans-serif;
+    &.header {
+      .title {
+        font-size: 3.6rem;
+        font-weight: 700;
+        color: var(--cHeading);
+      }
+
+      .date {
+        color: color(var(--cMain) lightness(30%));
+      }
+    }
+
+    &.description {
+       font-family: "Maven Pro", sans-serif;
+     }
   }
 }
 
