Height min/max proposition

--- a/app/components/ResultImage/styles.css
+++ b/app/components/ResultImage/styles.css
@@ -1,4 +1,8 @@
+$navigationSize: 50px;
+
 .resultImage {
+  max-height: calc(100vh - $navigationSize);
+  min-height: calc(100vh - $navigationSize);
   .overlay {
     position: absolute;
     width: 100%;
