--- a/app/components/Select/styles.css
+++ b/app/components/Select/styles.css
@@ -15,6 +15,9 @@
 
 :global .Select-control {
   min-width: 200px;
+  @media (max-width: 100em) {
+    min-width: 120px;
+  }
 }
 
 :global .Select-option {
