--- a/app/containers/MovieSearchForm/styles.css
+++ b/app/containers/MovieSearchForm/styles.css
@@ -11,7 +11,6 @@
   flex-direction: column;
   position: relative;
   max-width: 600px;
-
   &.horizontal {
     max-width: inherit;
     flex-wrap: wrap;
@@ -24,6 +23,7 @@
     bottom: 0;
     background-color: #22262e;
     padding: 30px 20px;
+    z-index: 4;
     :global .Select-control {
       background-color: #22262e;
     }
