--- a/app/components/SingleCrew/styles.css
+++ b/app/components/SingleCrew/styles.css
@@ -1,3 +1,17 @@
-.singleCrew {
-
+.image {
+  position: relative;
+  :local img {
+    width: 100%;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: var(--cMain);
+    opacity: 0.5;
+    z-index: 1;
+  }
 }
