--- a/app/components/Gallery/styles.css
+++ b/app/components/Gallery/styles.css
@@ -1,1 +1,16 @@
-/* .gallery {} */
+@lost flexbox flex;
+$maxHeight: calc(100vh - 50px);
+
+.gallery {
+  lost-column: 7/12 0;
+  position: relative;
+  overflow: hidden;
+  max-height: $maxHeight;
+  height: $maxHeight;
+  background-color: #22262e;
+  :local img {
+    /* height: 100vh; */
+    min-width: 100%;
+    lost-column: 1 0;
+  }
+}
