--- a/app/components/special/MovieArticle/styles.css
+++ b/app/components/special/MovieArticle/styles.css
@@ -3,4 +3,8 @@ $maxHeight: calc(100vh - 50px);
   lost-column: 5/12 0;
   overflow: auto;
   max-height: $maxHeight;
+  color: var(--cHeading);
+  padding: 25px 0 15px;
+  font-size: 18px;
+  font-family: "Quattrocento Sans", sans-serif;
 }
