--- a/app/components/special/MovieGallery/styles.css
+++ b/app/components/special/MovieGallery/styles.css
@@ -3,6 +3,9 @@ $maxHeight: calc(100vh - 50px);
 
 .gallery {
   lost-column: 7/12 0;
+  /* fixme: Problem with margins and PostCSS Inheritance, temporary fix is !important */
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
   position: relative;
   overflow: hidden;
   max-height: $maxHeight;
