Update image animation

--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -13,26 +13,39 @@ $navigationSize: 50px;
     opacity: 0.6;
     z-index: 3;
   }
+}
+
+.imageContainer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
   .image {
     position: absolute;
-    height: 100%;
-    width: 100%;
-    bottom: 150px;
-    background-size: cover;
-    background-position: 100% 150px;
-    animation: resultImageAnimation 15s infinite ease;
-    animation-delay: 1s;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    max-height: none;
+    max-width: none;
+    min-height: 100%;
+    min-width: 100%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
   }
 }
 
-@keyframes resultImageAnimation {
-  0% {
-    background-position: 100% 150px;
-  }
-  50% {
-    background-position: 100% 100%;
-  }
-  100% {
-    background-position: 100% 150px;
-  }
-}
+/*@keyframes resultImageAnimation {*/
+  /*0% {*/
+    /*background-position: 100% 150px;*/
+  /*}*/
+  /*50% {*/
+    /*background-position: 100% 100%;*/
+  /*}*/
+  /*100% {*/
+    /*background-position: 100% 150px;*/
+  /*}*/
+/*}*/
