--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -24,7 +24,7 @@ $navigationSize: 50px;
   overflow: hidden;
   .image {
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 50%;
     width: auto;
     height: auto;
@@ -32,9 +32,9 @@ $navigationSize: 50px;
     max-width: none;
     min-height: 100%;
     min-width: 100%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
+    /*animation: resultImageAnimation 15s infinite ease;*/
+    /*animation-delay: 1s;*/
   }
 }
 
