Fix eslint problems

--- a/app/components/general/Section/styles.css
+++ b/app/components/general/Section/styles.css
@@ -1,7 +1,8 @@
 @lost flexbox flex;
+
 .section {
   float: left;
-  margin: 24px 0 8px 0;
+  margin: 24px 0 8px;
   &.--1-of-1 {
     lost-column: 1/1;
   }
