--- a/internals/generators/container/constants.js.hbs
+++ b/internals/generators/container/constants.js.hbs
@@ -1,10 +1,12 @@
-/*
- *
- * {{ properCase name }} constants
- *
- */
+/**
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
+*/
 
 import { createRequestTypes } from 'utils/hooks';
+
 
 const DEFAULT_ACTION = createRequestTypes('app/{{ properCase name }}/DEFAULT_ACTION');
 
