--- a/internals/generators/container/sagas.js.hbs
+++ b/internals/generators/container/sagas.js.hbs
@@ -1,4 +1,12 @@
+/**
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
+*/
+
 import { take, call, put, select } from 'redux-saga/effects';
+
 
 // All sagas to be loaded
 export default [
