--- a/internals/generators/container/sagas.test.js.hbs
+++ b/internals/generators/container/sagas.test.js.hbs
@@ -1,10 +1,15 @@
 /**
- * Test  sagas
- */
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
+*/
 
 import { expect } from 'chai';
 import { take, call, put, select } from 'redux-saga/effects';
+
 import { defaultSaga } from '../sagas';
+
 
 const generator = defaultSaga();
 
