--- a/internals/generators/component/stateless.js.hbs
+++ b/internals/generators/component/stateless.js.hbs
@@ -1,15 +1,21 @@
 /**
-*
-* {{ properCase name }}
-*
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
 */
 
-import React from 'react';
+import React, { PropTypes as ptype } from 'react';
 
 {{#if wantCSS}}
 import styles from './styles.css';
 {{/if}}
 
+
+/**
+* {{ properCase name }}
+* @desc TODO: desc for {{ properCase name }}
+*/
 function {{ properCase name }}() {
   return (
     {{#if wantCSS}}
@@ -20,5 +26,7 @@ function {{ properCase name }}() {
     </div>
   );
 }
+
+{{ properCase name }}.propTypes = {};
 
 export default {{ properCase name }};
