--- a/internals/generators/container/reducer.js.hbs
+++ b/internals/generators/container/reducer.js.hbs
@@ -1,11 +1,14 @@
-/*
- *
- * {{ properCase name }} reducer
- *
- */
+/**
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
+*/
 
 import { fromJS } from 'immutable';
+
 import { DEFAULT_ACTION } from './constants';
+
 
 const initialState = fromJS({});
 
