--- a/internals/generators/container/test.js.hbs
+++ b/internals/generators/container/test.js.hbs
@@ -1,8 +1,14 @@
-import {{ properCase name }} from '../index';
-
+/**
+*  Components are imported in specific (scope based) order:
+*  1. Node_modules
+*  2. Application
+*  3. Module
+*/
 import { expect } from 'chai';
 import { shallow, render, mount } from 'enzyme';
 import React from 'react';
+
+import {{ properCase name }} from '../index';
 
 describe('<{{ properCase name }} />', () => {
 
