--- a/app/components/general/Select/styles.css
+++ b/app/components/general/Select/styles.css
@@ -14,7 +14,7 @@
   color: var(--cText);
 }
 
-:globaL .Select {
+:global .Select {
   color: var(--cText);
 }
 
@@ -24,6 +24,7 @@
 
 :global .Select-control {
   min-width: 200px;
+
   @media (max-width: 100em) {
     min-width: 120px;
   }
