LoadingIndicator now shows on each UPDATE_FILTER.REQUEST event

--- a/app/components/general/Button/styles.css
+++ b/app/components/general/Button/styles.css
@@ -12,6 +12,7 @@
   font-family: 'Quattrocento Sans', sans-serif;
   font-weight: 500;
   transition: all 0.35s ease;
+  cursor: pointer;
   &:hover {
     background-color: var(--cSupHover);
   }
