--- a/app/components/special/MovieGenres/styles.css
+++ b/app/components/special/MovieGenres/styles.css
@@ -2,6 +2,7 @@
   list-style: none;
   display: flex;
   flex-direction: row;
+  font-size: 1.2rem;
   .item {
     display: flex;
     flex-direction: column;
